# PlateShapez

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING  DATASET_CARD.md  LICENSE  README.md  demo_config.yaml  diff.md  manifest.md  manifest2.md  pyproject.toml  walk.py
.github/workflows/: ci.yml
demo_dataset/labels/: blue_car_plate_abc123_000.json  blue_car_plate_abc123_001.json  blue_car_plate_test01_000.json  blue_car_plate_test01_001.json  blue_car_plate_xyz789_000.json  blue_car_plate_xyz789_001.json  gray_car_plate_abc123_000.json  gray_car_plate_abc123_001.json  gray_car_plate_test01_000.json  gray_car_plate_test01_001.json  gray_car_plate_xyz789_000.json  gray_car_plate_xyz789_001.json  red_car_plate_abc123_000.json  red_car_plate_abc123_001.json  red_car_plate_test01_000.json  red_car_plate_test01_001.json  red_car_plate_xyz789_000.json  red_car_plate_xyz789_001.json
demo_dataset_api/labels/: blue_car_plate_abc123_000.json  blue_car_plate_abc123_001.json  blue_car_plate_test01_000.json  blue_car_plate_test01_001.json  blue_car_plate_xyz789_000.json  blue_car_plate_xyz789_001.json  gray_car_plate_abc123_000.json  gray_car_plate_abc123_001.json  gray_car_plate_test01_000.json  gray_car_plate_test01_001.json  gray_car_plate_xyz789_000.json  gray_car_plate_xyz789_001.json  red_car_plate_abc123_000.json  red_car_plate_abc123_001.json  red_car_plate_test01_000.json  red_car_plate_test01_001.json  red_car_plate_xyz789_000.json  red_car_plate_xyz789_001.json
docs/: project_spec.md  usage_examples.md
examples/: demo_full_workflow.py  generate_defaults.py
plate-shapes/: PlateShapez.pde
scripts/: check.sh  cleanup.py  dev  setup_runner.sh
src/plateshapez/: __init__.py  __main__.py  config.py  dev.py  pipeline.py
src/plateshapez/perturbations/: __init__.py  base.py  noise.py  shapes.py  texture.py  warp.py
src/plateshapez/utils/: io.py  overlay.py
tests/: test_config.py  test_integration.py  test_perturbations.py  test_pipeline.py
